--- a/static/style.css
+++ b/static/style.css
@@ -1,16 +1,18 @@
 body {
     font-family:Arial, Helvetica, sans-serif;
+    background-color: rgb(253, 253, 253);
     margin: 0;
     padding: 0;
 }
 nav {
-    background-color: #444;
+    background-color: #f0f0f0;
     padding: 10px;
 }
 nav a {
-    color: white;
-    text-decoration: none;
+    text-decoration: underline; 
+    color: rgb(101, 101, 232);
     margin-right: 15px;
+    font-weight: bold;
 }
 .content {
     padding: 20px;
