--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
         <a href="/">Home</a>
         <a href="/todo">To-Do</a>
         <a href="/timer">Timer</a>
+        <a href="/stats">Stats</a>
       </nav>
     <div class="content">
         {% block content %}{% endblock %}
