--- a/templates/timer.html
+++ b/templates/timer.html
@@ -7,6 +7,10 @@
 
 <button onclick="startTimer()">Start</button>
 <button onclick="resetTimer()">Reset</button>
+<a href="/start_session">
+    <button>Start Timer</button>
+</a>
+
 
 <script>
 let timer;
